tests/suite/snapshots/suite__check__tests__check__bad_final_6.xi.snap
---
source: tests/suite/check.rs
assertion_line: 34
expression: Snapshot(checked)
---
Error: Semantic error
   ╭─[tests/check/bad_final_6.xi:3:17]
   │
 1 │ template final class A {}
   ·                      ┬  
   ·                      ╰── Class defined here
   · 
 3 │ class B extends A::<> {}
   ·                 ──┬──  
   ·                   ╰──── Class t1A0 is declared final and cannot be extended
───╯

